--- a/Export/android/bin/AndroidManifest.xml
+++ b/Export/android/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="397" android:versionName="1.0.0" package="fr.hyperfiction.Tests">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="490" android:versionName="1.0.0" package="fr.hyperfiction.Tests">
 
-	<application android:label="HyperTest(s)" android:debuggable="true" android:icon="@drawable/icon">
+	<application android:label="HyperTest(s)" android:debuggable="true">
 		
 		<activity android:name="MainActivity" android:label="HyperTest(s)" android:configChanges="keyboard|keyboardHidden|orientation" android:screenOrientation="landscape">
 			
