--- a/extensions/hypertouch/project/Build.xml
+++ b/extensions/hypertouch/project/Build.xml
@@ -1,35 +1,61 @@
 <xml>
 
-<set name="no_thirdparty_extras" value="1"/>
-<set name="tool" value="static"/>
-<set name="mobile" value="1"/>
+  <set name="GCC_THIN_ARCHIVE" value="1" if="iphone"/>
 
-<set name="ndll-tool" value="static"/>
-<set name="name_extra" value=".iphoneos" if="iphoneos"/>
-<set name="name_extra" value=".iphonesim" if="iphonesim"/>
-<include name="${HXCPP}/build-tool/BuildCommon.xml"/>
-<set name="SLIBEXT" value=".a"/>
+  <include name="${HXCPP}/build-tool/BuildCommon.xml"/>
 
-<files id="iphone">
-  <depend name="${HXCPP}/include/hx/Macros.h"/>
-  <depend name="${HXCPP}/include/hx/CFFI.h"/>
-  <compilerflag value="-IiPhone/include"/>
-  <compilerflag value="-Iinclude"/>
-  <file name="iPhone/HyperTouch.mm"/>
-</files>
+  <set name="mobile" value="1" if="iphone"/>
+  <set name="mobile" value="1" if="android"/>
+  <set name="mobile" value="1" if="webos"/>
+  <set name="mobile" value="1" if="blackberry"/>
 
-<files id="common">
-  <compilerflag value="-Iinclude"/>
-  <file name="common/ExternalInterface.cpp"/>
-</files>
+  <set name="SLIBEXT" value=".lib" if="windows"/>
+  <set name="SLIBEXT" value=".a" unless="windows"/>
+  <set name="SLIBEXT" value=".so" if="webos"/>
 
-<target id="NDLL" output="libhypertouch${name_extra}" tool="linker" toolid="${ndll-tool}">
-  <outdir name="../ndll/${BINDIR}"/>
-  <files id="iphone"/>
-  <files id="common"/>        
-</target>
+  <set name="tool" value="exe" unless="iphone"/>
+  <set name="tool" value="static" if="iphone"/>
 
-<target id="default">
-   <target id="NDLL"/>
-</target>
+  <set name="IOS_ARCH" value="-v7" if="HXCPP_ARMV7"/>
+
+  <set name="ndll-tool" value="dll" unless="iphone"/>
+  <set name="ndll-tool" value="static" if="iphone"/>
+  <set name="name_extra" value=".iphoneos${IOS_ARCH}" if="iphoneos"/>
+  <set name="name_extra" value=".iphonesim" if="iphonesim"/>
+
+  <set name="no_thirdparty_extras" value="1" if="iphone"/>
+
+  <set name="sdl_static" value="1" unless="mobile"/>
+  <unset name="sdl_static" if="dynamic_sdl"/>
+  <set name="no_thirdparty_extras" value="1" if="dynamic_sdl"/>
+
+  <set name="name_prefix" value="lib" if="iphone" />
+  <files id="common">
+      <compilerflag value="-Iinclude"/>
+      <file name="common/ExternalInterface.cpp"/>
+  </files>
+
+  <files id="android">
+  </files>
+
+  <files id="iphone">
+      <depend name="${HXCPP}/include/hx/Macros.h"/>
+      <depend name="${HXCPP}/include/hx/CFFI.h"/>
+      <compilerflag value="-IiPhone/include"/>
+      <compilerflag value="-Iinclude"/>
+      <file name="iPhone/HyperTouch.mm"/>
+  </files>
+
+  <target id="NDLL" output="${name_prefix}hypertouch${name_extra}" tool="linker" toolid="${ndll-tool}">
+      <outdir name="../ndll/${BINDIR}" />
+      <ext value=".ndll" unless="mobile"/>
+      <files id="common"/>
+      <files id="iphone" if="iphone"/>
+      <files id="android" if="android"/>
+  </target>
+
+  <target id="default">
+    <target id="NDLL"/>
+  </target>
+
 </xml>
