--- a/extensions/hypertouch/project/Build.xml
+++ b/extensions/hypertouch/project/Build.xml
@@ -33,9 +33,11 @@
   <files id="common">
       <compilerflag value="-Iinclude"/>
       <file name="common/ExternalInterface.cpp"/>
+      <file name="android/Test.cpp"/>
   </files>
 
   <files id="android">
+       <compilerflag value="-Iinclude"/>
   </files>
 
   <files id="iphone">
