--- a/extensions/BugSense/project/Build.xml
+++ b/extensions/BugSense/project/Build.xml
@@ -44,13 +44,13 @@
       <depend name="${HXCPP}/include/hx/CFFI.h"/>
       <compilerflag value="-IiPhone/include"/>
       <compilerflag value="-Iinclude"/>
-      <file name="iPhone/HypGA.mm"/>
+      <file name="iPhone/BugSense.mm"/>
   </files>
 
   <set name="IOS_ARCH" value="-v7" if="HXCPP_ARMV7" />
   <set name="name_extra" value=".iphoneos${IOS_ARCH}" if="iphoneos"/>
 
-  <target id="NDLL" output="${name_prefix}HypGA${name_extra}" tool="linker" toolid="${ndll-tool}">
+  <target id="NDLL" output="${name_prefix}BugSense${name_extra}" tool="linker" toolid="${ndll-tool}">
       <outdir name="../ndll/${BINDIR}" />
       <ext value=".ndll" unless="mobile"/>
       <files id="common"/>
