--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,5 +23,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 	
 </manifest> 
