--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="122" android:versionName="1.0.0" package="fr.hyperfiction.Tests">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="200" android:versionName="1.0.1" package="fr.hyperfiction.Tests">
 
-	<application android:label="HyperTest(s)" android:debuggable="true" android:icon="@drawable/icon">
+	<!--
+	<application android:label="TestHypFacebook" android:debuggable="true" android:icon="@drawable/icon">
+	-->
+	<application android:label="TestHypFacebook"
+                 android:icon="@drawable/icon"
+                 android:theme="@android:style/Theme.NoTitleBar" 
+                 android:debuggable="true" >
 		
-		<activity android:name="MainActivity" android:label="HyperTest(s)" android:configChanges="keyboard|keyboardHidden|orientation" android:screenOrientation="portrait">
+		<activity 	android:name="com.facebook.LoginActivity"
+                  	android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  	android:label="TestHypFacebook" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="397904743584044" />
+
+		<activity 	android:name=".MainActivity" 
+					android:label="TestHypFacebook" 
+					android:configChanges="keyboard|keyboardHidden|orientation" 
+					android:screenOrientation="portrait">
 			
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<action 	android:name="android.intent.action.MAIN" />
+				<category 	android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 			
 		</activity>
-		<activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+
+		
 		
 	</application>
 
-	<uses-sdk android:minSdkVersion="10"/>
+	<uses-sdk android:minSdkVersion="8"/>
 	
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.INTERNET" />
