--- a/extensions/HypPusher/project/Build.xml
+++ b/extensions/HypPusher/project/Build.xml
@@ -14,12 +14,12 @@
   <set name="SLIBEXT" value=".so" if="webos"/>
 
   <set name="tool" value="exe" unless="iphone"/>
-  <set name="tool" value="static" if="iphone"/>
+  <set name="tool" value="static_link" if="iphone"/>
 
   <set name="IOS_ARCH" value="-v7" if="HXCPP_ARMV7"/>
 
   <set name="ndll-tool" value="dll" unless="iphone"/>
-  <set name="ndll-tool" value="static" if="iphone"/>
+  <set name="ndll-tool" value="static_link" if="iphone"/>
   <set name="name_extra" value=".iphoneos${IOS_ARCH}" if="iphoneos"/>
   <set name="name_extra" value=".iphonesim" if="iphonesim"/>
 
@@ -41,16 +41,12 @@
   </files>
 
   <files id="iphone">
-
       <depend name="${HXCPP}/include/hx/Macros.h"/>
       <depend name="${HXCPP}/include/hx/CFFI.h"/>
       <compilerflag value="-IiPhone/include"/>
       <compilerflag value="-Iinclude"/>
       <file name="iPhone/HypPusher.mm"/>
   </files>
-
-  <set name="IOS_ARCH" value="-v7" if="HXCPP_ARMV7" />
-  <set name="name_extra" value=".iphoneos${IOS_ARCH}" if="iphoneos"/>
 
   <target id="NDLL" output="${name_prefix}hyppusher${name_extra}" tool="linker" toolid="${ndll-tool}">
       <outdir name="../ndll/${BINDIR}" />
